@@ -1,3 +1,9 @@
+version 1.9.5, in progress
+
+Matrix operators: "B / A" now has the same semantics as 
+Octave/Matlab "matrix right division"; for square A, it's in
+principle equivalent to B * inv(A).
+
 2011-02-24 version 1.9.4
 
 The default random number generator has been changed from 
