@@ -64,12 +64,13 @@ enum {
               B_HCAT,     /* horizontal concatenation */
               B_VCAT,     /* vertical concatenation */
 	      B_LCAT,     /* list concatentation */
+	      B_LDIV,     /* matrix left division */
 	      OP_MAX,     /* SEPARATOR: end of binary operators */
               G_LPR,      /* grouping: left paren */
               G_RPR,      /* right paren */
               G_LBR,      /* left bracket */
-              G_RBR,      /* right bracket */
-  /* 40 */    G_LCB,      /* left curly bracket */
+  /* 40 */    G_RBR,      /* right bracket */
+              G_LCB,      /* left curly bracket */
 	      G_RCB,      /* right curly bracket */  
 	      P_COM,	  /* punctuation: comma */
 	      P_DOT,	  /* period */
@@ -78,8 +79,8 @@ enum {
 	      PUNCT_MAX,  /* SEPARATOR: end of grouping and punctuation marks */
               CON,	  /* named constant */
               DUM,	  /* dummy variable */
-	      USCALAR,	  /* user variable, scalar */
-  /* 50 */    USERIES,    /* user variable, series */
+  /* 50 */    USCALAR,	  /* user variable, scalar */
+              USERIES,    /* user variable, series */
 	      UMAT,	  /* user-defined matrix */
 	      UOBJ,	  /* user-defined object (e.g. model) */
 	      NUM,	  /* scalar, evaluated */
@@ -88,8 +89,8 @@ enum {
 	      LVEC,       /* list, as array of ints */
 	      MAT,	  /* matrix, evaluated */
 	      OBS,	  /* observation from a series */
-	      MSL,	  /* matrix plus subspec */
-  /* 60 */    DMSL,	  /* "dollar" matrix plus subspec */
+  /* 60 */    MSL,	  /* matrix plus subspec */
+              DMSL,	  /* "dollar" matrix plus subspec */
 	      DMSTR,	  /* "dollar" matrix plus string subspec */
 	      MSL2,	  /* unevaluated matrix subspec */
 	      MSPEC,	  /* evaluated matrix subspec */
@@ -98,8 +99,8 @@ enum {
 	      LAG,        /* variable plus lag length */	  
 	      DVAR,	  /* $ dataset variable (scalar or series) */
 	      MVAR,	  /* $ model var (scalar, series, or matrix) */
-	      OVAR,	  /* object variable: variable "under" an object */
-  /* 70 */    LIST,	  /* reference to named list */
+  /* 70 */    OVAR,	  /* object variable: variable "under" an object */
+              LIST,	  /* reference to named list */
 	      LISTVAR,    /* variable in list */
 	      STR,	  /* string */
 	      BUNDLE,     /* gretl bundle (hash table) */
@@ -108,8 +109,8 @@ enum {
 	      EMPTY,      /* "null" */
 	      ABSENT,
 	      DTYPE_MAX,  /* SEPARATOR: end of "bare" types */
-	      EROOT,	  /* dummy root for (...) expression */
-  /* 80 */    UFUN,	  /* user-defined function */
+  /* 80 */    EROOT,	  /* dummy root for (...) expression */
+              UFUN,	  /* user-defined function */
 	      RFUN,       /* GNU R function */
               VSTR,       /* string variable */
               INC,   
